compiler/tests/fixtures/invalid/semantics/chance_on_fixed_slots.viv
// Role with chance on fixed slots (min==max) — should be rejected

action bad-chance:
    roles:
        @actor:
            as: initiator
        @partner:
            as: partner
            n: 2-2 [50%]
